--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BASE_URL=https://zoom-call.vercel.app/
+NEXT_PUBLIC_BASE_URL=https://zoom-call.vercel.app
 
 
 NEXT_PUBLIC_STREAM_API_KEY=gpupzv9p46vg
